objects/LLC_BI__Schedule_Entry__c.object
<CustomObject>
    <description>This object stores the spread financial data for a Schedule.</description>
    <fields>
        <fullName>LLC_BI__Is_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this boolean field. If selected, the Schedule Entry contains total values for the associated Schedule Sections. If deselected, the Schedule Entry contains a manually entered or calculated value. By default, it is deselected.</description>
        <label>Is Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Schedule__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this required Lookup field to its associated Schedule. By default, it displays its associated Schedule.</description>
        <label>Schedule</label>
        <referenceTo>LLC_BI__Schedule__c</referenceTo>
        <relationshipLabel>Schedule Entries</relationshipLabel>
        <relationshipName>Schedule_Entries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Test_Double__c</fullName>
        <description>Used in unit tests.</description>
        <inlineHelpText>Used in unit tests.</inlineHelpText>
        <label>Test Double</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Schedule Entry</label>
    <nameField>
        <displayFormat>SE-{000000000}</displayFormat>
        <label>Schedule Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>